refactor: improve code quality and modernize Java patterns
Apply modern Java best practices across the codebase:
- Make fields final where possible to enforce immutability
- Add @Override annotations to interface implementations
- Replace StringBuffer with StringBuilder for better performance
- Simplify exception handling by removing redundant catch blocks
- Remove unused return values from void-context methods
- Standardize copyright headers to GPL v2 format
- Remove outdated legacy patterns documentation from AGENTS.md